# Corsika-in-ice

./: .gitattributes  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  coconut  config.status  configure  configure.ac  libtool  out  out~
bernlohr/: Makefile  Makefile.am  Makefile.in
coast/: ChangeLog  Makefile  Makefile.am  Makefile.in
coast/CorsikaFileIO/: Makefile  Makefile.am  Makefile.in  TCorsikaReader.cc  TCorsikaReader.h  TSubBlockIO.cc  TSubBlockIO.h
coast/CorsikaInterface/: Makefile  Makefile.am  Makefile.in
coast/CorsikaIntern/: CInteraction.cc  CInteraction.h  CorsikaConsts.h  IParticleReadout.cc  IParticleReadout.h  MParticle.cc  MParticle.h  MParticleBlock.cc  MParticleBlock.h  MRunHeader.cc  MRunHeader.h  Makefile  Makefile.am  Makefile.in  PersistentParticle.cc  PersistentParticle.h  TParticleBlockEntry.cc  TParticleBlockEntry.h  TSubBlock.cc  TSubBlock.h
coast/CorsikaOptions/: Makefile  Makefile.am  Makefile.in
coast/CorsikaOptions/CoREAS/: Makefile  Makefile.am  Makefile.in  TCorsika.cc  THRadioInterface.cc  TPlotter.cc  TPlotter.h  definitions.h  grid.cpp  grid.h  groundarea.cpp  groundarea.h  groundelement.cpp  groundelement.h  scenarioparams.cpp  scenarioparams.h  threevector.h
coast/CorsikaOptions/CoREAS/doc/: coreas-manual.tex
coast/CorsikaOptions/InclinedPlane/: InclinedPlane.cc  Makefile  Makefile.am  Makefile.in  TPlotter.cc
coast/CorsikaOptions/rootout/: MachineIndependent.cc  Makefile  Makefile.am  Makefile.in
coast/CorsikaROOT/: Makefile  Makefile.am  Makefile.in  TParticle.h
coast/CorsikaToROOT/: Makefile  Makefile.am  Makefile.in  TC2R.cc
coast/Documentation/: Makefile  Makefile.am  Makefile.in
coast/Documentation/Examples/novice/medium/: TReaderExample.h
conex/: Makefile  Makefile.am  Makefile.in
doc/: CORSIKA_GUIDE74xxx.ps  CORSIKA_PHYSICS.ps  Makefile  Makefile.am  Makefile.in  references.tex
dpmjet/: Makefile  Makefile.am  Makefile.in  dpmjet253bc.f  dpmjet253c.f  dpmjet254.f  dpmjet255c.f  dpmjet256c.f
epos/: Makefile  Makefile.in
herwig/: Makefile  Makefile.am  Makefile.in  README
include/: config.h  config.h.in
lib/: Makefile  Makefile.in
nexus/: Makefile  Makefile.in
pythia/: Makefile  Makefile.in  README  bobadif.f  bobapar.f  bomedif.f  bomepar.f  chabadif.f  chabapar.f  chamedif.f  chamepar.f  pypdfu.f  pyspli.f  update_notes6.4.10.txt
run/: #stackin.input#  1.txt~  DAT000001_ourversion  DAT000002.long  EGSDAT5_1.ICE  EGSDAT5_3.ICE  Makefile  Makefile.am  Makefile.in  all-inputs  all-inputs-epos  all-inputs-stackin  all-inputs-thin  corsika74005Linux_SIBYLL_gheisha  infile  infile~  inputs_Sloan  inputs_Sloan~  inputs_test  out  parallel-inputs  pythia_output  read_corsika_noproposal.py  read_corsika_noproposal.py~  stackin.input_mu  test.txt  test.txt~  test_full_simulation.i3
run/csv_finished/: corsika_1_.csv
run/outputs/: DAT000001  DAT000001.long  DAT000019  DAT000019.long
src/: Makefile  Makefile.am  Makefile.in  corsika.F  corsika.F~  corsika.h  corsika.h~  corsika74005Linux_QGSJET_gheisha_compilefile.f  corsikacompilefile.f  plottracks  sibyll2.1.f  tobuf.c
src/.deps/: timerc.Po  tobuf.Po
src/parallel/: CPU.plt  Real.plt  acreinphc3.f  acreinphc3.sh  mpi_runner.c  pllselectecuts.c  postprocess.sh  showanalyhc3.f  showanalyhc3.sh  showparallel.f  showparallel.sh  sumprocessing.sh  timeinfofiles.sh  unsetoptflags.sh  userguide-pll-hc3mpi.txt  userguide-pll-scripts.txt
src/utils/: DAT000001  coriskaread.steering  coriskaread.steering~  cors2input.f  corsikaread.cpp  corsikaread.cpp~  corsikaread.f  corsikaread.steering  corsikaread.steering~  corsikaread64  corsikaread_history  corsikaread_history.f  corsikaread_thin.f  map2png.c  modelprint.f  output  output2  output2~  plot.py  plot.py~  rcorsika  rcorsika32  readcsk2asci.f  readcskralplot.sh  readparticall.f  readparticall.sh  readtimes.f  shdatareduction.sh  shdatatanks.sh  showsimprods.f  showsimprods.sh  showsimulist.f  showsimulist.sh  sumlongifiles.f  sumlongifiles.sh
urqmd/: Makefile  Makefile.in
